fix footer cta button text alignment

--- a/assets/sass/partials/_footer.scss
+++ b/assets/sass/partials/_footer.scss
@@ -112,8 +112,9 @@
         transition:transform 150ms ease-out;
         font-size: 0.9em;
         font-weight: normal;
+        text-align: center;
         
-        @media screen and (min-width:480px) {
+        @media screen and (min-width:$bp-m) {
             padding:0.5em 2em;
         }
 
